<resources>
    <string name="Events">"Events"</string>
    <string name="Members">"Members"</string>
    <string name="Make_user">"Make user"</string>
    <string name="Remove_from_team">"Remove from team"</string>
    <string name="Cancel">"Cancel"</string>
    <string name="Teams">"Teams"</string>
    <string name="one_Member">"1 Member"</string>
    <string name="x_Members">"%d Members"</string>
    <string name="Logout">"Logout"</string>
    <string name="New_Team">"New Team"</string>
    <string name="Team_Name">"Team Name"</string>
    <string name="Private_Team">"Private Team"</string>
    <string name="Public_Team">"Public Team"</string>
    <string name="Your_team_is_public_and_everyone_can_join_it">"Your team is public and everyone can join it"</string>
    <string name="Your_team_is_private_and_you_can_invite_people">"Your team is private and you can invite people"</string>
    <string name="Create_Team">"Create Team"</string>
    <string name="You_are_in_the_following_Teams">"You are in the following Teams"</string>
    <string name="player_is_in_the_following_Teams">"%s is in the following Teams"</string>
    <string name="Leave_Team">"Leave Team"</string>
    <string name="Are_you_sure_that_you_want_to_leave_team_name">"Are you sure that you want to leave %s?"</string>
    <string name="User_Settings">"User Settings"</string>
    <string name="Personal_Settings">"Personal Settings"</string>
    <string name="Password">"Password"</string>
    <string name="Change_Password">"Change Password"</string>
    <string name="Old_Password">"Old Password"</string>
    <string name="New_Password">"New Password"</string>
    <string name="Repeat_new_Password">"Repeat new Password"</string>
    <string name="You_are_not_verified">"You are not verified"</string>
    <string name="Resend_E_Mail">"Resend E-Mail"</string>
    <string name="Firstname">"Firstname"</string>
    <string name="Lastname">"Lastname"</string>
    <string name="Email">"Email"</string>
    <string name="Save">"Save"</string>
    <string name="Create_Event">"Create Event"</string>
    <string name="Start">"Start"</string>
    <string name="End">"End"</string>
    <string name="Event_Name">"Event Name"</string>
    <string name="Location">"Location"</string>
    <string name="Description">"Description"</string>
    <string name="Show_all_Events">"Show all Events"</string>
    <string name="There_are_no_planned_events">"There are no planned events"</string>
    <string name="Future_Events">"Planned Events"</string>
    <string name="Past_Events">"Past Events"</string>
    <string name="No_Events_found">"No Events found"</string>
    <string name="No_Location">"No Location"</string>
    <string name="News">"News"</string>
    <string name="Actions">"Actions"</string>
    <string name="Edit">"Edit"</string>
    <string name="Please_select_an_action">"Please select an action"</string>
    <string name="New_News">"New News"</string>
    <string name="Message">"Message"</string>
    <string name="Create_News">"Create news"</string>
    <string name="Participation">"Participation"</string>
    <string name="You_can_now_select_who_participated">"You can now select who participated"</string>
    <string name="Please_set_participation">"Please set participation"</string>
    <string name="Login">"Login"</string>
    <string name="Forgot_Password">"Forgot Password"</string>
    <string name="Register">"Register"</string>
    <string name="Please_fill_in_your_email_address_and_we_will_send_you_a_new_password">"Please fill in your email address and we will send you a new Password"</string>
    <string name="Request_new_Password">"Request new Password"</string>
    <string name="Join_this_public_team">"Join this public team"</string>
    <string name="Join_this_private_team">"Join this private team"</string>
    <string name="Confirmation_email_sent">"Confirmation email sent"</string>
    <string name="Continue">"Continue"</string>
    <string name="You_do_not_have_a_team_yet">"You do not have a team yet"</string>
    <string name="You_do_not_have_a_team_yet_Go_ahead_and_create_one_using_the_on_the_top_right">"You do not have a team yet. Go ahead and create one using the '+' on the top right."</string>
    <string name="Repeat_Password">"Repeat Password"</string>
    <string name="Done">"Done"</string>
    <string name="Set_Attendance">"Set Attendance"</string>
    <string name="Did_attend">"Did attend"</string>
    <string name="Did_not_attend">"Did not attend"</string>
    <string name="Back">"Back"</string>
    <string name="No_Description">"No Description"</string>
    <string name="Please_enter_your_email_address">"Please enter your email address"</string>
    <string name="Requesting_new_Password">"Requesting new Password"</string>
    <string name="Successfully_requested_a_new_password">"Successfully requested a new password"</string>
    <string name="Loading">"Loading"</string>
    <string name="Saved">"Saved"</string>
    <string name="Passwords_must_match">"Passwords must match"</string>
    <string name="Please_fill_in_this_field">"Please fill in this field"</string>
    <string name="Join_Team">"Join Team"</string>
    <string name="Do_really_want_to_join_x">"Do really want to join %s?"</string>
    <string name="Successfully_joined_x">"Successfully joined %s"</string>
    <string name="Successfully_left_team_x">"Successfully left team %s"</string>
    <string name="Send_reminder">"Send reminder"</string>
    <string name="Update_Event">"Update Event"</string>
    <string name="Please_enter_a_name">"Please enter a name"</string>
    <string name="Please_enter_a_start_date">"Please enter a start date"</string>
    <string name="Please_enter_an_end_date">"Please enter an end date"</string>
    <string name="Please_enter_a_location">"Please enter a location"</string>
    <string name="End_date_must_be_after_start_date">"End date must be after start date"</string>
    <string name="Delete_Event">"Delete Event"</string>
    <string name="Do_you_really_want_to_delete_this_event">"Do you really want to delete this event?"</string>
    <string name="Yes">"Yes"</string>
    <string name="No">"No"</string>
    <string name="No_News">"No News"</string>
    <string name="Delete">"Delete"</string>
    <string name="Make_Coach">"Make Coach"</string>
    <string name="This_team_is_not_available">"This team is not available"</string>
    <string name="There_was_an_error_loading_this_team">"There was an error loading this team"</string>
    <string name="Delete_Team">"Delete Team"</string>
    <string name="Do_you_really_want_to_delete_x">"Do you really want to delete %s?"</string>
    <string name="Team_deleted">"Team deleted"</string>
    <string name="Edit_Team">"Edit Team"</string>
    <string name="The_teams_name_must_be_at_least_three_characters_long">"The team's name must be at least 3 characters long"</string>
    <string name="Please_enter_a_team_name">"Please enter a team name"</string>
    <string name="You_are_now_verified">"You are now verified"</string>
    <string name="Verification_failed">"Verification failed"</string>
    <string name="Error">"Error"</string>
    <string name="Success">"Success"</string>
    <string name="No_images_found">"No images found"</string>
    <string name="Participate_yes">"I will attend"</string>
    <string name="Participate_no">"I will not attend"</string>
    <string name="to">"to"</string>
    <string name="Select_Team">"Select Team"</string>
    <string name="Awesome">"Awesome!"</string>
    <string name="You_already_have_teams_Go_ahead_and_select_one">"You already have teams. Go ahead and select one."</string>
    <string name="do_you_want_to_delete_the_messsage">"Do you want to delete the messsage?"</string>
    <string name="reminder_sent">"Successfully sent a reminder"</string>
    <string name="Name_is_required">"Name is required"</string>
    <string name="Select_beginning_date">"Select beginning date"</string>
    <string name="Select_beginning_time">"Select beginning time"</string>
    <string name="Select_end_time">"Select end time"</string>
    <string name="Select_end_date">"Select end date"</string>
    <string name="Update_Team">"Update Team"</string>
    <string name="User_Profile_was_updated_successfully">"User Profile was updated successfully"</string>
    <string name="Please_check_your_mails_and_verify_your_email_address">"Please check your emails and verify your email address"</string>
    <string name="Can_t_find_the_mail_trigger_a_new_email_in_the_user_settings">"Can't find the email? Trigger a new email in the user settings"</string>
    <string name="Edit_Event">"Edit Event"</string>
    <string name="Trying_to_join_team">"Trying to join team..."</string>
    <string name="Invite_to_team">"Invite to team"</string>
    <string name="Update_Profile">"Update Profile"</string>
    <string name="Member">"Member"</string>
    <string name="You">"You"</string>
    <string name="Unauthorized">"You do not have the required rights to perform this action"</string>
    <string name="Internal_server_error">"Whoops. There was an error on our side"</string>
    <string name="The_last_coach_cant_leave_the_team">"The last coach cannot leave the team"</string>
    <string name="The_email_address_was_already_verified">"Your email address is already confirmed"</string>
    <string name="The_email_address_was_already_registered">"Your email address is already in use"</string>
    <string name="The_email_address_is_required">"The email address is required"</string>
    <string name="The_user_could_not_be_found">"The user could not be found"</string>
    <string name="The_team_could_not_be_found">"The team could not be found"</string>
    <string name="The_event_has_already_started">"The event has already started"</string>
    <string name="The_event_has_not_started_yet">"The event has not started yet"</string>
    <string name="The_event_could_not_be_found">"The event could not be found"</string>
    <string name="The_image_is_missing">"The image is missing"</string>
    <string name="The_membership_could_not_be_found">"The membership could not be found"</string>
    <string name="The_role_is_invalid">"The role is invalid"</string>
    <string name="The_team_already_exists">"The team already exists"</string>
    <string name="The_token_is_not_valid">"The token is invalid"</string>
    <string name="The_user_is_already_member_of_this_team">"You are already part of this team"</string>
    <string name="The_credentials_are_not_correct">"The credentials are not correct"</string>
    <string name="The_verification_token_could_not_be_found">"The confirmation link has expired"</string>
    <string name="Old_password_new_password_and_password_repeat_are_required">"Old password, new password and repeated password are required"</string>
    <string name="New_passwords_do_not_match">"New passwords do not match"</string>
    <string name="Wrong_password">"Wrong password"</string>
    <string name="Your_participation_was_updated_successfully">"Your participation was updated"</string>
    <string name="Your_registration_was_successful">"Your registration was successful"</string>
    <string name="The_role_was_updated_successfully">"The role was updated successfully"</string>
    <string name="Joined_team_successfully">"You joined this team"</string>
    <string name="Left_team_successfully">"You left this team"</string>
    <string name="The_user_was_removed_user_successfully">"The user was removed from the team"</string>
    <string name="The_team_was_updated_successfully">"The team was updated"</string>
    <string name="The_team_was_deleted_successfully">"The team was deleted"</string>
    <string name="Terms_of_Use">"Terms of Use"</string>
    <string name="Legal">"Legal Information"</string>
    <string name="Dataprivacy">"Data Privacy"</string>
    <string name="Third_party_licences">"3rd Party Libraries Licenses"</string>
</resources>